[package]
name = "browserless-html-to-pdf"
version = "0.1.0"
edition = "2024"
description = "Browserless Rust HTTP service: HTML → PDF and PDF → image (PNG/JPEG), no headless Chromium."
license = "MIT"
repository = "https://github.com/nanodeck/browserless-html-to-pdf"
readme = "README.md"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3

[lib]
name = "browserless_html_to_pdf"
path = "src/lib.rs"

[[bin]]
name = "browserless-html-to-pdf"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
hayro = "0.7.0"
ironpress = "1.4.3"
scalar-doc = "0.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
tokio = { version = "1.52.3", features = ["full"] }
opendal = { version = "0.51", features = ["services-fs"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "timeout", "trace"] }
tower_governor = "0.7"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
mime = "0.3"
dotenvy = "0.15"
multer = "3.1"
